# virdant

./: Cargo.toml  README.md
.github/workflows/: cargo_test.yaml
demo/: Makefile  project.pfc  run.sh  testbench.v
docs/: .gitignore  Makefile
docs/source/: conf.py  getting-started.rst  index.rst  modules.rst  principles.rst  virdant_ext.py
docs/source/_static/: custom.css
docs/source/expressions/: index.rst
docs/source/types/: builtin-types.rst  index.rst  user-defined.rst
examples/: alu.vir  buffer.vir  echo.vir  edge.vir  example.vir  foo.vir  gcd.vir  helllo.vir  hello.vir  lfsr.vir  lights.vir  passthrough.vir  ports.vir  queue.vir  random.vir  resetter.vir  rf.vir  sim.vir  structs.vir  top.vir  uart.vir  uart_demo.vir  uartsender.vir
ext/: Memory.v
lib/: builtin.vir
sketches/: example.vir  passthrough.vir
spec/: spec.md
src/: ast.rs  better_verilog.rs  check.rs  checker.rs  common.rs  context.rs  db.rs  elab.rs  eval.rs  expr.rs  grammar.lalrpop  grammar.pest  hir.rs  id.rs  lib.rs  loc.rs  main.rs  mlir.rs  parse.rs  phase.rs  sim.rs  tests.rs  topological_sort.rs  typecheck.rs  types.rs  value.rs  vcd.rs  verilog.rs
src/db/: astq.rs  packageq.rs  structureq.rs  typecheckq.rs
src/hir/: check.rs  expr.rs  passes.rs
src/hir/expr/: ascription.rs  cat.rs  idx.rs  idxrange.rs  ifexpr.rs  literal.rs  methodcall.rs  reference.rs  vec.rs  word.rs
src/hir/passes/: check.rs  coalesceconnects.rs
src/phase/: astq.rs  check.rs  id.rs  imports.rs  item_dependency.rs  item_namespace.rs  item_resolution.rs  item_structure.rs  layout.rs  resolve.rs  sourceq.rs  structure.rs  type_resolution.rs  typecheck.rs
vim/ftdetect/: virdant.vim
vim/syntax/: virdant.vim
vir/: Cargo.toml
vir-lsp/: Cargo.toml  main.old.rs
vir-lsp/src/: main.rs
vir/src/: main.rs
virdant/: Cargo.toml
virdant/examples/: top.vir
virdant/examples/errors/: bar.vir  dup_import.vir  duplicate_item.vir  item_dep_cycle.vir  kind_error.vir  missing_dependency.vir  syntax_error.vir
virdant/src/: cycle.rs  error.rs  grammar.pest  id.rs  lib.rs  parse.rs  ready.rs  table.rs  tests.rs  types.rs
virdant/src/vir/: lsp.rs
