[package]
name = "virdant"
version = "0.1.0-rc0"
edition = "2021"
license = "MIT"
description = "Virdant is a modern hardware description language."
readme = "README.md"
publish = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
internment = "0.8.4"
lalrpop = "0.20.2"
lalrpop-util = "0.20.2"
pest = "2.7.11"
pest_derive = "2.7.11"
salsa = "0.16.1"

[features]
default = ["phase"]
phase = []

[[bin]]
name = "vir"
path = "src/main.rs"
