[package]
name = "virdant-lsp"
version = "0.1.0-rc0"
edition = "2021"
license = "MIT"
description = "The Virdant language server. Virdant is a modern hardware description language."
readme = "../README.md"
publish = true
authors = ["Michael Maloney"]
default-run = "vir-lsp"

[[bin]]
name = "vir-lsp"
path = "src/main.rs"

[dependencies]
virdant = { path = "../virdant", version = "0.1.0-rc0" }
log = "0.4.22"
env_logger = "0.11.5"
directories = "5.0.1"
serde_json = "1.0.120"
