[package]
name = "virdant"
version = "0.1.0-rc0"
edition = "2021"
license = "MIT"
description = "Virdant is a modern hardware description language."
readme = "README.md"
publish = true
authors = ["Michael Maloney"]

[dependencies]
pest = "2.7.11"
pest_derive = { version = "2.7.11", features = ["grammar-extras"] }
